fix: full support for gradle 9 test run while keeping support for 6 as well